--- a/.gitignore
+++ b/.gitignore
@@ -88,8 +88,12 @@ ENV/
 # Rope project settings
 .ropeproject
 
-# PyCharm
-.idea
+# IDE and text editor
+.idea/
+.vscode/
+
+# OS
+.DS_Store
 
 # data files
 data/
